# nedo_project_code

./: .gitignore  .gitmodules  LICENSE  README.md  requirements.txt
LLaMA2-Accessory/: convert_tokenizer_and_model_to_hugginface.py  dMoE_merge_and_convert_and_upload.sh  dmoe_batch.sh  env01.sh  env02.sh  merge_model_weights.py  requirements.txt  upload_tokenizer_and_model_to_huggingface_hub.py
LLaMA2-Accessory/accessory/: create_ssh_config_file_for_gcp_play_multi_node_multi_gpu.sh  engine_finetune.py  engine_pretrain.py  main_finetune.py  (+2 more)
dMoE_postprocess/: LICENSE  README.md  dMoE_postprocess.sh  environ.sh
data_management/: README.md
docs/: condaenv.md  folders.md  pretrain.md  zombie.md
pretrain/: multi.sh  tokenize.sh  up.sh
pretrain-main/: LICENSE  README.md  environment.yml  environment_guide.md
team_hatakeyama/: README.md
team_hatakeyama/1_DataPreparation/PMC/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
team_hatakeyama/1_DataPreparation/PMC/.devcontainer/: devcontainer.json
team_hatakeyama/1_DataPreparation/PMC/script/: README.md  deduplicate.py  downloadCombineJsonl.py  execClustering.py  uploadHuggingface.py
team_hatakeyama/1_DataPreparation/PMC/src/: batch_process.py  config.py  data_handler.py  huggingface.py  main.py  pipeline_setup.py  text_extraction.py  xml_processing.py
team_kawagoshi/pipeline/step00_download_datasets/download_datasets/create_dataset_self_instruct/ogawa/: README.md  pyproject.toml
team_kawagoshi/pipeline/step00_download_datasets/download_datasets/create_dataset_self_instruct/ogawa/test/mixtral/: Self_Instruct_Mixtral_For_Everyone.py  convert_jsonl_to_json.py  fundamental_analyses.py
team_kawagoshi/pipeline/step00_download_datasets/download_datasets/create_dataset_self_instruct/ogawa/test/mixtral/data/input/: input_human_check.txt
team_kawagoshi/pipeline/step00_download_datasets/download_datasets/create_dataset_self_instruct/ogawa/test/mixtral/data/output/: FA_generated_data_2024-05-25_19-39-28.xlsx  RTE_generated_data_2024-05-23_01-18-11.json
team_kawagoshi/pipeline/step00_download_datasets/download_datasets/create_dataset_self_instruct/ogawa/test/prompt/: system.md  system_rte.md
team_kawagoshi/pipeline/step00_download_datasets/download_datasets/create_dataset_self_instruct/ogawa/test/shot_sample/: grammaticality.json  rte.json
team_sannai/: README.md
tokenizer/: README.md
(+648 files in other folders)
